minor change in link

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <h1 class="display-4">Image gallery</h1>
         <p class="lead text-warning font-italic"> Go vegan right now</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+          <a class="btn btn-primary btn-lg" href="https://www.vegan.com/why/" role="button">Learn more</a>
       </div>
       <div class="gallery">
         <div class="images justify-content-around m-4 row" data-aos="fade-right" data-aos-easing="ease-in-sine" data-aos-duration="900">
